--- a/atri_app/app/src/custom/Home/style.scss
+++ b/atri_app/app/src/custom/Home/style.scss
@@ -37,7 +37,6 @@ a{
   &:hover{
     .Image6{
       transform: translateX(10px);
-      transition: all 0.4s ease-in-out;
     }
   }
 }
@@ -51,7 +50,7 @@ a{
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
-.TextBox46, .TextBox52, .TextBox53, .TextBox59, .TextBox56, .TextBox92, .TextBox141, .TextBox183, .TextBox188, .TextBox209{
+.TextBox46, .TextBox52, .TextBox53, .TextBox59, .TextBox56, .TextBox92, .TextBox141, .TextBox183, .TextBox188, .TextBox209, .TextBox231{
   background-image: linear-gradient(108deg, #b16cea 8%, #ff5e69 40%, #ff8a56 77%, #ffa84b 91%);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -68,4 +67,25 @@ a{
 }
 .Flex240{
   filter: saturate(0%);
+}
+
+.TextBox7:hover, .TextBox8:hover, .TextBox9:hover, .TextBox10:hover{
+  color: #0000008c;
+}
+.TextBox7, .TextBox8, .TextBox9, .TextBox10{
+  transition: color 200ms ease;
+}
+
+.Flex284{
+  .Image116{
+    transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+    transform-style: preserve-3d;
+    transition: all 0.4s ease-in-out;
+  }
+  &:hover{
+    .Image116{
+      transform: translateX(10px);
+
+    }
+  }
 }
